<resources>
    <string name="app_name">SCURFID6</string>
    <string name="hello">Hello, </string>
    <string name="john">john</string>
    <string name="scan_id">Scan ID</string>
    <string name="barcode_list2">Barcode List</string>
    <string name="organize">Organize</string>
    <string name="log_session">Log Session</string>
    <string name="updates">Updates</string>
    <string name="dummy_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis nec nisl nunc.</string>
    <string name="my_account">My Account</string>
    <string name="settings">Settings</string>
    <string name="barcode_details">Barcode Details</string>
    <string name="table_name">Table Name :</string>
    <string name="barcode_id">Barcode ID :</string>
    <string name="old_location_2">Old Location 2 :</string>
    <string name="storage_location_2">Storage Location 2 :</string>
    <string name="new_location">New Location :</string>
    <string name="storage_at">Storage At :</string>
    <string name="client_id">Client ID</string>
    <string name="order_state">Order State :</string>
    <string name="object_id">Object ID :</string>
    <string name="location_init">Location Init :</string>
    <string name="barcode_list">Barcode List</string>
    <string name="this_is_barcode_list_still_in_development_coming_soon">This Is Barcode List. Still In Development. Coming Soon!</string>
    <string name="surat_data_baru">Surat Data Baru :</string>
    <string name="date_in">Date In :</string>
    <string name="date_out">Date Out :</string>
    <string name="code_charge">Code Charge :</string>
    <string name="check_date">Check Date :</string>
    <string name="check_by">Check By :</string>
    <string name="medium">Medium :</string>
    <string name="rfid">RFID :</string>
    <string name="old_location">Old Location :</string>
    <string name="storage_location">Storage Location</string>
    <string name="log_session2">Log Session</string>
    <string name="tvLogSession">This is Log Session. Still in Development. Coming Soon!</string>
    <string name="organize_barcode">Organize Barcode</string>
    <string name="updates2">Updates</string>
</resources>